log
Thu Mar 19 07:08:05 PM UTC 2026: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:57:19: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   57 |    int elemento = first(L);
      |                   ^~~~~
exercises.c:58:20: error: comparison between pointer and integer [-Werror]
   58 |    while (elemento != NULL)
      |                    ^~
exercises.c:61:19: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   61 |          elemento = next(L);
      |                   ^
cc1: all warnings being treated as errors
3b6b359
